# genrs

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
cmake/: genrs-extras.cmake.em
scripts/: CMakeLists.txt  gen_rs.py  mod.rs.template  msg.rs.template  srv.rs.template
src/genrs/: __init__.py
