<?xml version="1.0"?>
<package>
  <name>genrs</name>
  <version>0.0.0</version>
  <description>Rust ROS message and service generators</description>
  <maintainer email="adnanademovic100@gmail.com">Adnan Ademovic</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>genmsg</build_depend>
  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>rs</message_generator>
  </export>
</package>
